# python-iriai-compose

./: .gitignore  README.md  TUTORIAL.md  pyproject.toml
examples/: claude_code_review.py  code_review.py  feature_planning.py
iriai_compose/: __init__.py  actors.py  pending.py  prompts.py  runner.py  runtime.py  storage.py  tasks.py  workflow.py
iriai_compose/runtimes/: __init__.py  claude.py  terminal.py
tests/: conftest.py  test_e2e.py  test_hooks.py  test_imports.py  test_runner.py  test_runtimes.py  test_storage.py  test_tasks.py
