[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iriai-compose"
version = "0.1.0"
description = "Runtime-agnostic, actor-neutral workflow orchestration for multi-agent systems"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
terminal = ["questionary>=2.0,<3.0"]
testing = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
